font size for splash header changed

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -1357,6 +1357,7 @@ body.mini-navbar.fixed-sidebar .logo-element {
 
 .splash-header {
   font-size: 42px;
+  font-weight: 300;
   color: black;
   text-align: center;
   margin: 300px;
