--- a/app/assets/stylesheets/base/landing.scss
+++ b/app/assets/stylesheets/base/landing.scss
@@ -1,6 +1,6 @@
 /*
  *
- *   MAKERLINK Landing Page  - Make it happen.
+ *   MAKERLINK Landing Page  - Get Creative..
  *   Copyright 2014 Webapplayers.com
  *
 */
