--- a/app/assets/stylesheets/base/skins.scss
+++ b/app/assets/stylesheets/base/skins.scss
@@ -1,6 +1,6 @@
 /*
  *
- *   SKIN 1 - MAKERLINK  - Make it happen.
+ *   SKIN 1 - MAKERLINK  - Get Creative..
  *   NAME - Blue light
  *
 */
@@ -138,7 +138,7 @@ body.skin-1 {
 
 /*
  *
- *   SKIN 2 - MAKERLINK  - Make it happen.
+ *   SKIN 2 - MAKERLINK  - Get Creative..
  *   NAME - Inspinia Ultra
  *
 */
@@ -327,7 +327,7 @@ body.skin-2 #wrapper {
 
 /*
  *
- *   SKIN 3 - MAKERLINK  - Make it happen.
+ *   SKIN 3 - MAKERLINK  - Get Creative..
  *   NAME - Yellow/purple
  *
 */
