--- a/app/views/static_pages/prev-root.html.erb
+++ b/app/views/static_pages/prev-root.html.erb
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="carousel-caption" style="margin-left: 40%">
               <h1>Have an idea?</h1>
-              <p style="margin-left: 50px; margin-top: 50px"><a class="btn btn-lg btn-primary" href="#" role="button">Make it happen.</a></p>
+              <p style="margin-left: 50px; margin-top: 50px"><a class="btn btn-lg btn-primary" href="#" role="button">Get Creative..</a></p>
             </div>
         </div>
         <!-- Set background for slide in css -->
