--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
     <!-- Main css styles -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+
+    <!--  Mailchimp shit  -->
     <style type="text/css">
       #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
       /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
@@ -36,42 +38,27 @@
 </head>
 <body>
 
-<!-- Skin configuration box -->
-<!-- <%= render 'layouts/skinconfig' %> -->
-
-    <!-- Wrapper-->
     <div id="wrapper" class="<%= params[:controller] %>.<%= params[:action] %>">
 
-        <!-- Navigation -->
         <%= render 'layouts/navigation' %>
 
-        <!-- Page wraper -->
         <div id="page-wrapper" class="gray-bg <%= @extra_class %>">
 
-            <!-- Page wrapper -->
             <%= render 'layouts/topnavbar' %>
 
-            <!-- Main view  -->
             <%= render 'layouts/errors' %>
             <%= yield %>
 
-            <!-- Footer -->
             <%= render 'layouts/footer' %>
 
         </div>
-        <!-- End page wrapper-->
 
-        <!-- Right sidebar -->
         <%= render 'layouts/rightsidebar' %>
 
     </div>
-    <!-- End wrapper-->
 
-    <!-- Include javascript per-controller - vendor plugins -->
     <%= javascript_include_tag params[:controller] if ::Rails.application.assets.find_asset("#{params[:controller]}.js") %>
 
-    <!-- Include javascript per-view -->
-    <!-- For demo purpose we include javascript in view but you can easily start SeedProject and organize it with Rails asset pipeline as you want -->
     <%= yield :javascript %>
 
 </body>
