--- a/app/assets/stylesheets/base/landing.scss
+++ b/app/assets/stylesheets/base/landing.scss
@@ -29,7 +29,7 @@
 
 body.landing-page {
   color: $text-color;
-  font-family: 'Open Sans', helvetica, arial, sans-serif;
+  font-family: 'Roboto', helvetica, arial, sans-serif;
   background-color: #fff;
 }
 
@@ -96,7 +96,7 @@ body.landing-page {
   }
   .navbar-default .nav li a {
     color: gray;
-    font-family: 'Open Sans', helvetica, arial, sans-serif;
+    font-family: 'Roboto', helvetica, arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: uppercase;
