--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -1507,9 +1507,7 @@ body.mini-navbar.fixed-sidebar .logo-element {
   width: 80px;
 }
 .mailchimp-button {
-  position: absolute;
-  top: 75px;
-  left: 38vw;
+  float: left;
   font-weight: 100;
   padding: 0.35vh 1.5vw;
   padding-bottom: 1px;
